--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,60 @@
-language: java
+addons:
+  artifacts:
+    debug: true
+    paths:
+    - libs.zip
+    - build.zip
+    - testbuild.zip
+    - jacoco.exec
+    target_paths: 74bb7a48-e714-4853-900a-d4aa00cf7bb9
+after_success:
+- ' wget --content-disposition http://search.maven.org/remotecontent?filepath=org/jacoco/jacoco/0.7.7.201606060606/jacoco-0.7.7.201606060606.zip '
+- ' unzip -o jacoco-0.7.7.201606060606.zip  '
+- ' cd lib  '
+- ' mv * ../  '
+- ' cd ..  '
+- ' chmod a+x *  '
+- ' cd $PWD  '
+- ' rm  ''jacoco.exec'''
+- ' export JAVA_TOOL_OPTIONS=-javaagent:$PWD/jacocoagent.jar=destfile=$PWD/jacoco.exec,append=true  '
+- ' travis_wait 720 mvn  test -Dmaven.test.failure.ignore=true -Djacoco.skip=true
+  -Dcobertura.skip=true -Dmaven.clover.skip=true -Dmaven.javadoc.skip=true -Drat.skip=true
+  -Drat.ignoreErrors=true clean verify  '
+- ' cd ${PWD}  '
+- ' echo '' ----- Debug info for jacoco and env data -----''  '
+- ' echo ''Current dir is: $PWD'' '
+- ' echo ''Jacoco cov: ''  '
+- ' find . -name ''*.exec''  '
+- ' echo '' ----------------------------------------------'' '
+- ./df-build.sh
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq protobuf-compiler
-  - sudo apt-get install -qq libboost-dev libboost-test-dev libboost-program-options-dev libevent-dev automake libtool flex bison pkg-config g++ libssl-dev
-  - wget -nv http://archive.apache.org/dist/thrift/0.7.0/thrift-0.7.0.tar.gz
-  - tar zxf thrift-0.7.0.tar.gz
-  - cd thrift-0.7.0
-  - chmod +x ./configure
-  - ./configure --disable-gen-erl --disable-gen-hs --without-ruby --without-haskell --without-erlang
-  - sudo make install
-  - cd ..
+- sudo apt-get update -qq
+- sudo apt-get install -qq protobuf-compiler
+- sudo apt-get install -qq libboost-dev libboost-test-dev libboost-program-options-dev
+  libevent-dev automake libtool flex bison pkg-config g++ libssl-dev
+- wget -nv http://archive.apache.org/dist/thrift/0.7.0/thrift-0.7.0.tar.gz
+- tar zxf thrift-0.7.0.tar.gz
+- cd thrift-0.7.0
+- chmod +x ./configure
+- ./configure --disable-gen-erl --disable-gen-hs --without-ruby --without-haskell
+  --without-erlang
+- sudo make install
+- cd ..
+branches: ''
+cache:
+  directories:
+  - $HOME/.m2
+jdk:
+- oraclejdk8
+language: java
+notifications:
+  webhooks:
+    on_failure: always
+    on_start: always
+    on_success: always
+    urls:
+    - http://insights-portal-insights-service-webserver-dev.public-swarm.devfactory.com/travisWebHookListener?build_id=74bb7a48-e714-4853-900a-d4aa00cf7bb9
+script:
+- mvn test-compile -Dgpg.skip=true -Dlicense.skip=true
+- mvn test-compile -Dgpg.skip=true -Dlicense.skip=true
+# Modified by Insights Service at 2016-11-27 19:16:34.003116
